[gd_scene load_steps=5 format=3 uid="uid://f6el85dbjvhl"]

[ext_resource type="Script" path="res://Scripts/HUD.gd" id="1_8nwmt"]
[ext_resource type="FontFile" uid="uid://bvws5wxqob7kh" path="res://fonts/Xolonium-Regular.ttf" id="2_eef8v"]

[sub_resource type="InputEventAction" id="InputEventAction_ny58q"]
action = &"start_game"

[sub_resource type="Shortcut" id="Shortcut_hv8j3"]
events = [SubResource("InputEventAction_ny58q")]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_8nwmt")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -22.5
offset_right = 22.5
offset_bottom = 81.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_eef8v")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -121.5
offset_right = 240.0
offset_bottom = 121.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_eef8v")
theme_override_font_sizes/font_size = 64
text = "Esquiva las Letras!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -102.5
offset_top = -140.0
offset_right = 102.5
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_eef8v")
theme_override_font_sizes/font_size = 64
button_mask = 5
shortcut = SubResource("Shortcut_hv8j3")
text = "Jugar"

[node name="LinkButton" type="LinkButton" parent="."]
offset_left = 317.0
offset_top = 696.0
offset_right = 477.0
offset_bottom = 736.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "RollingCode SchoolÂ©"
underline = 2

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="LinkButton" to="." method="_on_link_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
